testfx/errors/error_tests/edge_19_async_await.fx
// 异步语法
async function fetchData() {
    result := await fetch("https://api.example.com")
    return result
}

async := () {
    await promise
}
